# zerodha_portfolio

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_ff_markowitz.py  example_report.py  ff_india_daily.csv  ff_markowitz_report.html  markowitz_report.html
src/zerodha_markowitz/: __init__.py  data.py  exceptions.py  optimizer.py  report.py
src/zerodha_portfolio/: __init__.py  data.py  fama_french.py  report.py
tests/: test_data_batching.py  test_fama_french.py  test_optimizer.py
